# tree-sitter-jai

./: CMakeLists.txt  Package.swift  go.mod  grammar.js  grammar.js.bak  package-lock.json  pyproject.toml  setup.py  test.jai  tree-sitter.json
bindings/python/tests/: test_binding.py
bindings/swift/TreeSitterjaiTests/: TreeSitterjaiTests.swift
src/: grammar.json  node-types.json  parser.c
tests/: .gitignore  Lexer.jai  build.jai  conditional.jai  insert.jai  main.jai  proc_default_value.jai  string.jai  struct_member_assign.jai  union_and_nested_struct.jai
